# Canonical-Huffman-Lookup

./: LICENSE  README.md  pakcage.cabal
examples/: Complete Works of Shakespeare_encoded.hmc  Complete Works of Shakespeare_encoded_codes.txt  Ulysses_encoded.hmc  Ulysses_encoded_codes.txt
src/: CanonicalHuffmanCode.hs
