name:          canonical-huffman-code
version:       0.1.0.0
build-type:    Simple
cabal-version: >=1.10

library
  exposed-modules: CanonicalHuffmanCode
  build-depends:   base >=4.14 && <5, text, containers, bytestring, filepath, array
  hs-source-dirs:  src
  default-language: Haskell2010
  ghc-options:     -Wall